What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added


November 14, 2007
! [FOD] First Patch by Callum Lerwick. Instead of reinventing realloc, j2k_read_sod now just uses opj_realloc in j2k.c
		Second Patch by Callum Lerwick. This patch rearranges the largest memory allocations so they're allocated as 
		late as possible, and freed as soon as possible. This cuts memory usage by about half on two large test images.

November 13, 2007
! [FOD] Patch by Dzonatas and Callum Lerwick.
        Fp/vectorization patch which basically converts most of the irreversible decode codepath to floating point,
        eliminating a few rounds of int/fp conversion, resulting in a vast performance improvement,
	and an increase in accuracy.

November 8, 2007
! [FOD] In t1.c, small change to avoid calling twice t1_getwmsedec()
        Patches from Callum Lewick:
		- Basic gcc optimization flags in cmake and makefile match.
		- Fixed some spelling errors in dwt.c.

November 5, 2007
*+ [GB] Fixed a bug which prevented JPWL from working on multi-tiled images; added some more fields in the interface info structures 
(keep a list of markers, save start packet number for each tile)

October 23, 2007
* [GB] Improved success for the linux build; OPJViewer shows all the COM contents
 
October 18, 2007
* [FOD] Changed the ROI parameter in the image_to_j2k codec to make it correspond to the documentation (i.e. -ROI c=0,U=25)
* [FOD] Patch from Callum Lewick. Memset patch. 
		The main idea of the patch is that currently opj_malloc clears all allocations, which unnecessarily
		dirties up the cache and eats bandwidth. This patch makes it no longer do so, and I've painstakingly determined which allocations actually need
		to be cleared and changed them to use opj_calloc() instead. I previously tried to just get rid of the opj_*alloc wrappers but that